Fixed: spacing issues in Performances section

--- a/src/sass/grid-layout.scss
+++ b/src/sass/grid-layout.scss
@@ -85,6 +85,7 @@ $wnd-lg: 1230px;
 .full-bleed {
     width: 100%;
     grid-column: 1 / 4;
+    padding: 0.5em 0;
 }
 
 .two-column-grid {
