--- a/src/sass/red-glass-button.scss
+++ b/src/sass/red-glass-button.scss
@@ -54,6 +54,10 @@ $wnd-lg: 1200px;
   margin-top: 0 !important;
 }
 
+.red-glass-button.medium-space-above {
+  margin-top: 1.5em !important;
+}
+
 .red-glass-button.extra-space-above {
   margin-top: 2.5em !important;
 }
